kajit/src/snapshots/kajit__disasm_tests__disasm_postcard_enum_external_aarch64.snap
---
source: kajit/src/disasm_tests.rs
expression: out
---
=== postcard/enum_external ===
> sub sp, sp, #0x60
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x620
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x5d8
  ldrb w9, [x19]
  mov x24, x9
  add x19, x19, #0x1
  and x14, x14, x24
  and x23, x23, x24
  cmp x23, x15
  b.ne $+0x20
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x23, x9
  mov x15, x23
  mov x15, x23
  b $+0xd8
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x24, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x570
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x1, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x528
  ldrb w9, [x19]
  mov x3, x9
  add x19, x19, #0x1
  add x24, x24, x15
  sub x23, x23, x2
  and x25, x25, x3
  mov x2, x3
  and x2, x2, x0
  cmp x23, x1
  cset x0, ne
  mov x9, x25
  mov x10, x15
  lsl x9, x9, x10
  mov x15, x9
  cmp x2, x26
  cset x26, ne
  orr x14, x14, x15
  mov x15, x24
  mov x24, x25
  mov x24, x26
  cbz x26, $+0x8
  cbnz x0, $-0xb4
  mov x15, x24
  cmp x15, x13
  mov x23, x14
  lsr x23, x23, x12
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x4ac
  cmp x23, x11
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x494
  mov w10, #0x0
  cmp x14, x10
  b.eq $+0x2c
  mov w10, #0x1
  cmp x14, x10
  b.eq $+0x34
  mov w10, #0x2
  cmp x14, x10
  b.eq $+0x244
  mov w10, #0x3
  cmp x14, x10
  b.eq $+0x438
  b $+0x434
  mov x9, #<imm>
  mov x11, x9
  mov x9, x11
  strb w9, [x21]
  b $+0x42c
  mov x9, #<imm>
  mov x15, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x42c
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x23, x9
  mov x9, x15
  strb w9, [x21]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x3dc
  ldrb w9, [x19]
  mov x15, x9
  add x19, x19, #0x1
  and x11, x11, x15
  and x14, x14, x15
  cmp x14, x12
  b.ne $+0x24
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x12, x9
  mov x25, x11
  mov x26, x12
  mov x26, x12
  b $+0xe4
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x15, x9
  mov x25, x11
  mov x26, x14
  mov x11, x12
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x364
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x1, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x31c
  ldrb w9, [x19]
  mov x3, x9
  add x19, x19, #0x1
  add x12, x12, x26
  sub x11, x11, x2
  and x14, x14, x3
  mov x2, x3
  and x2, x2, x0
  cmp x11, x1
  cset x0, ne
  mov x9, x14
  mov x10, x26
  lsl x9, x9, x10
  mov x26, x9
  cmp x2, x15
  cset x15, ne
  orr x25, x25, x26
  mov x26, x12
  mov x12, x14
  mov x12, x15
  cbz x15, $+0x8
  cbnz x0, $-0xb4
  mov x26, x12
  cmp x26, x13
  mov x11, x25
  lsr x11, x11, x24
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x2a0
  cmp x11, x23
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x288
  str x19, [x22]
  mov x0, x22
  mov x1, x25
  add x2, x21, #0x8
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x25c
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x20
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x234
  b $+0x210
  mov x9, #<imm>
  mov x24, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x210
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, x24
  strb w9, [x21]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x1c0
  ldrb w9, [x19]
  mov x24, x9
  add x19, x19, #0x1
  mov x14, x24
  and x14, x14, x23
  mov x23, x24
  and x23, x23, x25
  cmp x23, x15
  b.ne $+0x20
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x15, x9
  mov x23, x15
  mov x23, x15
  b $+0xe4
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x24, x9
  mov x25, x14
  mov x14, x23
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x148
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x5, x9
  mov x9, #<imm>
  mov x8, x9
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x17, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x100
  ldrb w9, [x19]
  mov x2, x9
  add x19, x19, #0x1
  add x23, x23, x14
  sub x15, x15, x5
  and x24, x24, x2
  mov x1, x2
  and x1, x1, x8
  cmp x15, x17
  cset x0, ne
  mov x9, x24
  mov x10, x14
  lsl x9, x9, x10
  mov x14, x9
  cmp x1, x26
  cset x26, ne
  orr x14, x14, x25
  mov x25, x14
  mov x14, x23
  mov x23, x24
  mov x23, x26
  cbz x26, $+0x8
  cbnz x0, $-0xb8
  mov x14, x25
  cmp x23, x13
  mov x9, x14
  mov x10, x12
  lsr x9, x9, x10
  mov x12, x9
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x78
  cmp x12, x11
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x60
  str x19, [x22]
  mov x0, x22
  mov x1, x14
  add x2, x21, #0x8
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x34
  b $+0x10
  mov w9, #0xe
  str w9, [x22, #0x10]
  b $+0x24
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x60
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x60
  ret
