kajit/src/snapshots/kajit__disasm_tests__disasm_postcard_enum_external_x86_64.snap
---
source: kajit/src/disasm_tests.rs
expression: out
---
=== postcard/enum_external ===
> push rbp
  sub rsp, 0xd0
  mov qword [rsp], rbp
  mov qword [rsp + 0x8], rbx
  mov qword [rsp + 0x10], r12
  mov qword [rsp + 0x18], r13
  mov qword [rsp + 0x20], r14
  mov qword [rsp + 0x28], r15
  mov r14, rdi
  mov r15, rsi
  mov r12, qword [r15]
  mov r13, qword [r15 + 0x8]
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0xa9b
  mov r10, 0x7f
  mov rdx, r10
  mov r10, 0x80
  mov rsi, r10
  mov r10, 0x0
  mov rbx, r10
  mov r10, 0x0
  mov rax, r10
  mov qword [rsp + 0x30], rax
  mov r10, 0x20
  mov rcx, r10
  mov qword [rsp + 0x38], rcx
  mov r10, 0x0
  mov rax, r10
  mov qword [rsp + 0x40], rax
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0xa17
  movzx r10d, byte [r12]
  mov rdi, r10
  add r12, 0x1
  mov r10, rdi
  and r10, rdx
  mov rcx, r10
  mov r10, rdi
  and r10, rsi
  mov rax, r10
  mov r10, rax
  cmp r10, rbx
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  test rbx, rbx
  jz $+0x5
  jmp $+0x30
  mov r10, 0x4
  mov rbx, r10
  mov r10, 0x0
  mov rbx, r10
  mov rdx, rcx
  mov rax, rbx
  mov rax, rbx
  mov rsi, qword [rsp + 0x30]
  jmp $+0x181
  mov r10, 0x7
  mov rax, r10
  mov r10, 0x4
  mov rbx, r10
  mov r10, 0x1
  mov rdx, r10
  mov qword [rsp + 0x78], rcx
  mov rcx, rax
  mov qword [rsp + 0x80], rcx
  mov r8, rbx
  jmp $+0x0
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x947
  mov r10, 0x7f
  mov r8, r10
  mov r10, 0x7
  mov rdi, r10
  mov r10, 0x1
  mov rsi, r10
  mov r10, 0x80
  mov rbx, r10
  mov r10, 0x0
  mov r9, r10
  mov r10, 0x0
  mov rax, r10
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x8db
  movzx r10d, byte [r12]
  mov rcx, r10
  add r12, 0x1
  mov rdx, qword [rsp + 0x80]
  mov r10, rdx
  add r10, rdi
  mov rdi, r10
  mov rdx, qword [rsp + 0x88]
  mov r10, rdx
  sub r10, rsi
  mov rdx, r10
  mov r10, rcx
  and r10, r8
  mov r8, r10
  mov r10, rcx
  and r10, rbx
  mov rsi, r10
  mov r10, rdx
  cmp r10, rax
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  mov rcx, qword [rsp + 0x80]
  mov r10, r8
  shl r10, cl
  mov rcx, r10
  mov r10, rsi
  cmp r10, r9
  setnz r10b
  movzx r10, r10b
  mov r9, r10
  mov rax, qword [rsp + 0x78]
  mov r10, rax
  or r10, rcx
  mov rax, r10
  mov r10, r9
  and r10, rbx
  mov rbx, r10
  mov rcx, rdi
  mov qword [rsp + 0x80], rcx
  mov rcx, r8
  mov rsi, r9
  test rbx, rbx
  jnz $+0x857
  mov rdx, rax
  mov rax, rsi
  jmp $+0x0
  mov r10, rax
  cmp r10, rsi
  setnz r10b
  movzx r10, r10b
  mov rax, r10
  mov rcx, qword [rsp + 0x38]
  mov r10, rdx
  shr r10, cl
  mov rbx, r10
  test rax, rax
  jz $+0x1a
  jmp $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x2
  jmp $+0x7e1
  mov rdi, qword [rsp + 0x40]
  mov r10, rbx
  cmp r10, rdi
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  test rbx, rbx
  jz $+0x1a
  jmp $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0xc
  jmp $+0x7a5
  mov r10, rdx
  cmp r10d, 0x0
  jz $+0x2c
  cmp r10d, 0x1
  jz $+0x3b
  cmp r10d, 0x2
  jz $+0x3d2
  cmp r10d, 0x3
  jz $+0x731
  jmp $+0x72c
  mov r10, 0x0
  mov rbx, r10
  mov r10, rbx
  mov byte [r14], r10b
  jmp $+0x720
  mov r10, 0x1
  mov rdi, r10
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x722
  mov r10, 0x7f
  mov rcx, r10
  mov r10, 0x80
  mov rsi, r10
  mov r10, 0x0
  mov rdx, r10
  mov r10, 0x0
  mov rbx, r10
  mov qword [rsp + 0x48], rbx
  mov r10, 0x20
  mov rbx, r10
  mov qword [rsp + 0x50], rbx
  mov r10, 0x0
  mov rax, r10
  mov qword [rsp + 0x58], rax
  mov r10, rdi
  mov byte [r14], r10b
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x694
  movzx r10d, byte [r12]
  mov rbx, r10
  add r12, 0x1
  mov r10, rbx
  and r10, rcx
  mov rcx, r10
  mov r10, rbx
  and r10, rsi
  mov rbx, r10
  mov r10, rbx
  cmp r10, rdx
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  test rbx, rbx
  jz $+0x5
  jmp $+0x30
  mov r10, 0x4
  mov rbx, r10
  mov r10, 0x0
  mov rbx, r10
  mov rsi, rcx
  mov rax, rbx
  mov rax, rbx
  mov rdx, qword [rsp + 0x48]
  jmp $+0x181
  mov r10, 0x7
  mov rdi, r10
  mov r10, 0x4
  mov rbx, r10
  mov r10, 0x1
  mov rax, r10
  mov qword [rsp + 0x90], rcx
  mov rcx, rdi
  mov qword [rsp + 0x98], rcx
  mov r8, rbx
  jmp $+0x0
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x5c4
  mov r10, 0x7f
  mov r8, r10
  mov r10, 0x7
  mov rdi, r10
  mov r10, 0x1
  mov rdx, r10
  mov r10, 0x80
  mov rbx, r10
  mov r10, 0x0
  mov r9, r10
  mov r10, 0x0
  mov rax, r10
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x558
  movzx r10d, byte [r12]
  mov rcx, r10
  add r12, 0x1
  mov rsi, qword [rsp + 0x98]
  mov r10, rsi
  add r10, rdi
  mov rdi, r10
  mov rsi, qword [rsp + 0xa0]
  mov r10, rsi
  sub r10, rdx
  mov rsi, r10
  mov r10, rcx
  and r10, r8
  mov r8, r10
  mov r10, rcx
  and r10, rbx
  mov rdx, r10
  mov r10, rsi
  cmp r10, rax
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  mov rcx, qword [rsp + 0x98]
  mov r10, r8
  shl r10, cl
  mov rcx, r10
  mov r10, rdx
  cmp r10, r9
  setnz r10b
  movzx r10, r10b
  mov r9, r10
  mov rax, qword [rsp + 0x90]
  mov r10, rax
  or r10, rcx
  mov rax, r10
  mov r10, r9
  and r10, rbx
  mov rbx, r10
  mov rcx, rdi
  mov qword [rsp + 0x98], rcx
  mov rcx, r8
  mov rdx, r9
  test rbx, rbx
  jnz $+0x501
  mov rsi, rax
  mov rax, rdx
  jmp $+0x0
  mov r10, rax
  cmp r10, rdx
  setnz r10b
  movzx r10, r10b
  mov rax, r10
  mov rcx, qword [rsp + 0x50]
  mov r10, rsi
  shr r10, cl
  mov rbx, r10
  test rax, rax
  jz $+0x1a
  jmp $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x2
  jmp $+0x45e
  mov rdi, qword [rsp + 0x58]
  mov r10, rbx
  cmp r10, rdi
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  test rbx, rbx
  jz $+0x1a
  jmp $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0xc
  jmp $+0x422
  mov qword [r15], r12
  push rsi
  lea r10, qword [r14 + 0x8]
  push r10
  mov rdi, r15
  pop rdx
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x3e6
  mov qword [r15], r12
  lea r10, qword [r14 + 0x20]
  push r10
  mov rdi, r15
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x3ae
  jmp $+0x37c
  mov r10, 0x2
  mov rdi, r10
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x37e
  mov r10, 0x7f
  mov rcx, r10
  mov r10, 0x80
  mov rsi, r10
  mov r10, 0x0
  mov rdx, r10
  mov r10, 0x0
  mov rbx, r10
  mov qword [rsp + 0x60], rbx
  mov r10, 0x20
  mov rbx, r10
  mov qword [rsp + 0x68], rbx
  mov r10, 0x0
  mov rax, r10
  mov qword [rsp + 0x70], rax
  mov r10, rdi
  mov byte [r14], r10b
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x2f0
  movzx r10d, byte [r12]
  mov rbx, r10
  add r12, 0x1
  mov r10, rbx
  and r10, rcx
  mov rcx, r10
  mov r10, rbx
  and r10, rsi
  mov rbx, r10
  mov r10, rbx
  cmp r10, rdx
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  test rbx, rbx
  jz $+0x5
  jmp $+0x30
  mov r10, 0x4
  mov rbx, r10
  mov r10, 0x0
  mov rbx, r10
  mov rdi, rcx
  mov rsi, rbx
  mov rdx, qword [rsp + 0x60]
  mov rsi, rbx
  jmp $+0x181
  mov r10, 0x7
  mov rax, r10
  mov r10, 0x4
  mov rbx, r10
  mov r10, 0x1
  mov rdx, r10
  mov qword [rsp + 0xa8], rcx
  mov rcx, rax
  mov qword [rsp + 0xb0], rcx
  mov rdi, rbx
  jmp $+0x0
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x220
  mov r10, 0x7f
  mov rdi, r10
  mov r10, 0x7
  mov r9, r10
  mov r10, 0x1
  mov rdx, r10
  mov r10, 0x80
  mov rbx, r10
  mov r10, 0x0
  mov r8, r10
  mov r10, 0x0
  mov rax, r10
  cmp r12, r13
  jnb $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x1b4
  movzx r10d, byte [r12]
  mov rcx, r10
  add r12, 0x1
  mov rsi, qword [rsp + 0xb0]
  mov r10, rsi
  add r10, r9
  mov r9, r10
  mov rsi, qword [rsp + 0xb8]
  mov r10, rsi
  sub r10, rdx
  mov rsi, r10
  mov r10, rcx
  and r10, rdi
  mov rdi, r10
  mov r10, rcx
  and r10, rbx
  mov rdx, r10
  mov r10, rsi
  cmp r10, rax
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  mov rcx, qword [rsp + 0xb0]
  mov r10, rdi
  shl r10, cl
  mov rcx, r10
  mov r10, rdx
  cmp r10, r8
  setnz r10b
  movzx r10, r10b
  mov r8, r10
  mov rax, qword [rsp + 0xa8]
  mov r10, rax
  or r10, rcx
  mov rax, r10
  mov r10, r8
  and r10, rbx
  mov rbx, r10
  mov rcx, r9
  mov qword [rsp + 0xb0], rcx
  mov rcx, rdi
  mov rdx, r8
  test rbx, rbx
  jnz $+0x18a
  mov rdi, rax
  mov rsi, rdx
  jmp $+0x0
  mov r10, rsi
  cmp r10, rdx
  setnz r10b
  movzx r10, r10b
  mov rax, r10
  mov rcx, qword [rsp + 0x68]
  mov r10, rdi
  shr r10, cl
  mov rbx, r10
  test rax, rax
  jz $+0x1a
  jmp $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x2
  jmp $+0xba
  mov r9, qword [rsp + 0x70]
  mov r10, rbx
  cmp r10, r9
  setnz r10b
  movzx r10, r10b
  mov rbx, r10
  test rbx, rbx
  jz $+0x1a
  jmp $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0xc
  jmp $+0x7e
  mov qword [r15], r12
  push rdi
  lea r10, qword [r14 + 0x8]
  push r10
  mov rdi, r15
  pop rdx
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x42
  jmp $+0x10
  mov dword [r15 + 0x10], 0xe
  jmp $+0x2d
  mov qword [r15], r12
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbx, qword [rsp + 0x8]
  mov rbp, qword [rsp]
  add rsp, 0xd0
  pop rbp
  ret
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbx, qword [rsp + 0x8]
  mov rbp, qword [rsp]
  add rsp, 0xd0
  pop rbp
  ret
