kajit/src/snapshots/kajit__disasm_tests__disasm_postcard_flatten_aarch64.snap
---
source: kajit/src/disasm_tests.rs
expression: out
---
=== postcard/flatten ===
> sub sp, sp, #0xa0
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x608
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x50]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x58]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x60]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x68]
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x23, x9
  str x23, [sp, #0x70]
  mov x9, #<imm>
  mov x23, x9
  str x23, [sp, #0x78]
  mov x9, #<imm>
  mov x23, x9
  str x23, [sp, #0x80]
  mov x9, #<imm>
  mov x23, x9
  str x23, [sp, #0x88]
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x23, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x540
  ldrb w9, [x19]
  mov x1, x9
  add x19, x19, #0x1
  mov x0, x1
  and x0, x0, x2
  and x15, x15, x1
  cmp x15, x14
  b.ne $+0x24
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x15, x9
  mov x14, x0
  mov x0, x15
  mov x0, x15
  b $+0xf4
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x15, x9
  mov x15, x0
  mov x0, x1
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x4c8
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x3, x9
  mov x9, #<imm>
  mov x5, x9
  mov x9, #<imm>
  mov x4, x9
  mov x9, #<imm>
  mov x6, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x480
  ldrb w9, [x19]
  mov x7, x9
  add x19, x19, #0x1
  add x1, x1, x14
  mov x9, x0
  mov x10, x3
  sub x9, x9, x10
  mov x3, x9
  and x2, x2, x7
  and x7, x7, x5
  cmp x3, x6
  cset x0, ne
  mov x9, x2
  mov x10, x14
  lsl x9, x9, x10
  mov x14, x9
  cmp x7, x4
  cset x17, ne
  orr x14, x14, x15
  mov x15, x14
  mov x14, x1
  mov x0, x3
  mov x1, x2
  mov x1, x17
  cbz x17, $+0x8
  cbnz x0, $+0x434
  mov x14, x15
  mov x0, x1
  cmp x0, x13
  mov x9, x14
  mov x10, x12
  lsr x9, x9, x10
  mov x12, x9
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x3e8
  cmp x12, x11
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x3d0
  str x19, [x22]
  mov x0, x22
  mov x1, x14
  add x2, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x3a4
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x38c
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x374
  ldrb w9, [x19]
  mov x12, x9
  add x19, x19, #0x1
  ldr x2, [sp, #0x50]
  mov x11, x12
  and x11, x11, x2
  ldr x4, [sp, #0x58]
  and x12, x12, x4
  ldr x5, [sp, #0x60]
  cmp x12, x5
  cset x12, ne
  cbnz x12, $+0x24
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x12, x9
  mov x13, x12
  ldr x1, [sp, #0x68]
  mov x13, x12
  b $+0xe4
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x14, x9
  mov x14, x11
  mov x11, x13
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x2ec
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x3, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x2, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x2a4
  ldrb w9, [x19]
  mov x4, x9
  add x19, x19, #0x1
  add x13, x13, x11
  sub x12, x12, x3
  and x15, x15, x4
  mov x3, x4
  and x3, x3, x1
  cmp x12, x2
  cset x1, ne
  mov x9, x15
  mov x10, x11
  lsl x9, x9, x10
  mov x11, x9
  cmp x3, x0
  cset x0, ne
  orr x11, x11, x14
  mov x14, x11
  mov x11, x13
  mov x13, x15
  mov x13, x0
  cbz x0, $+0x8
  cbnz x1, $+0x288
  mov x11, x14
  cmp x13, x1
  mov x12, x11
  lsr x12, x12, x26
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x224
  ldr x3, [sp, #0x70]
  cmp x12, x3
  cset x12, ne
  cbnz x12, $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x204
  mov x9, x11
  str w9, [x21, #0x30]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x1e4
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x1cc
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x7, [sp, #0x78]
  mov x26, x11
  and x26, x26, x7
  ldr x6, [sp, #0x80]
  and x11, x11, x6
  ldr x17, [sp, #0x88]
  cmp x11, x17
  cset x11, ne
  cbnz x11, $+0x24
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x12, x9
  mov x11, x26
  mov x13, x12
  mov x13, x12
  b $+0xf8
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x13, x9
  mov x13, x26
  mov x15, x12
  mov x26, x11
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x140
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x2, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xf8
  ldrb w9, [x19]
  mov x3, x9
  add x19, x19, #0x1
  add x12, x12, x15
  mov x9, x26
  mov x10, x11
  sub x9, x9, x10
  mov x11, x9
  and x14, x14, x3
  mov x4, x3
  and x4, x4, x1
  cmp x11, x2
  cset x26, ne
  mov x9, x14
  mov x10, x15
  lsl x9, x9, x10
  mov x15, x9
  cmp x4, x0
  cset x17, ne
  orr x13, x13, x15
  mov x15, x12
  mov x26, x11
  mov x11, x14
  mov x12, x17
  cbz x17, $+0x8
  cbnz x26, $-0xc4
  mov x11, x13
  mov x13, x12
  cmp x13, x25
  mov x12, x11
  lsr x12, x12, x24
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x68
  cmp x12, x23
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x50
  str x19, [x22]
  mov x0, x22
  mov x1, x11
  add x2, x21, #0x18
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x24
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xa0
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xa0
  ret
